// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/reporting/v2/basic_report_details.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

// Proto representation of the internal Basic Report entity type.
message BasicReport {
  // Ex: If a `BasicReport` has the name
  // "measurementconsumers/abc/basicreports/abcd", then the
  // `MeasurementConsumer` ID is "abc" and the `BasicReport` ID is "abcd".
  string cmms_measurement_consumer_id = 1;
  string external_basic_report_id = 2;
  BasicReportDetails details = 3;
  google.protobuf.Timestamp create_time = 4;
}
